--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,7 +1,9 @@
 @use './fonts';
 @use './settings';
 @use './interface';
+@use './animations';
 @use './chunk/header';
 @use './chunk/hero';
+@use './chunk/aboutUs';
 @use './chunk/footer';
 @use './media';
