--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -2,15 +2,12 @@
 
   .hero {
 
-    &-content {
+    &__title {
+      font-size: 70px;
+    }
 
-      &__title {
-        font-size: 70px;
-      }
-
-      &__text {
-        font-size: 40px;
-      }
+    &__text {
+      font-size: 40px;
     }
   }
 }
@@ -29,17 +26,14 @@
 
   .hero {
 
-    &-content {
+    &__title {
+      margin-bottom: 30px;
+      font-size: 55px;
+    }
 
-      &__title {
-        margin-bottom: 30px;
-        font-size: 55px;
-      }
-
-      &__text {
-        margin-bottom: 40px;
-        font-size: 35px;
-      }
+    &__text {
+      margin-bottom: 35px;
+      font-size: 35px;
     }
   }
 }
@@ -59,17 +53,14 @@
 
   .hero {
 
-    &-content {
+    &__title {
+      margin-bottom: 20px;
+      font-weight: 600;
+      font-size: 40px;
+    }
 
-      &__title {
-        margin-bottom: 20px;
-        font-weight: 600;
-        font-size: 40px;
-      }
-
-      &__text {
-        font-size: 28px;
-      }
+    &__text {
+      font-size: 28px;
     }
   }
 }
@@ -78,26 +69,19 @@
 
   .hero {
 
-    &-content {
+    &__title {
+      margin-bottom: 5px;
+      font-weight: 600;
+      font-size: 36px;
+    }
 
-      &__title {
-        margin-bottom: 5px;
-        font-weight: 600;
-        font-size: 36px;
-      }
-
-      &__text {
-        margin-bottom: 0;
-        font-weight: 400;
-        font-size: 20px;
-      }
+    &__text {
+      font-weight: 400;
+      font-size: 20px;
     }
 
     &-wrap {
-
-      &__iphones {
-        height: 420px;
-      }
+      gap: 10px;
     }
   }
 }
