--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,5 +5,6 @@
 @use './chunk/header';
 @use './chunk/hero';
 @use './chunk/aboutUs';
+@use './chunk/aboutProject';
 @use './chunk/footer';
 @use './media';
