--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -2,7 +2,7 @@ $font-main: 'Radio Canada', sans-serif;
 $font-second: 'Raleway', sans-serif;
 $col-bg-main: #fafafa;
 $col-bg-second: #fff;
-$col-bg-third: #cdedff;
+$col-bg-third: rgba(141, 187, 237, 0.1);
 $col-txt-main: #4f4f4f;
 $col-txt-second: #0a8ed9;
 $col-accent: #39b7ff;
