секция FAQ: html, css, спойлеры

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,9 +2,14 @@
 @use './settings';
 @use './interface';
 @use './animations';
+
 @use './chunk/header';
 @use './chunk/hero';
 @use './chunk/aboutUs';
 @use './chunk/aboutProject';
+@use './chunk/problem';
+@use './chunk/faq';
+
 @use './chunk/footer';
+
 @use './media';
