--- a/scss/chunk/_faq.scss
+++ b/scss/chunk/_faq.scss
@@ -20,8 +20,8 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
-      padding: 10px 15px;
-      margin-bottom: 20px;
+      padding: 0px 15px 20px;
+      margin-bottom: 10px;
       cursor: pointer;
       user-select: none;
       border-bottom: 1px solid $col-accent;
