--- a/scss/chunk/_problem.scss
+++ b/scss/chunk/_problem.scss
@@ -27,6 +27,7 @@
       content: "";
       width: 40px;
       height: 40px;
+      top: 5px;
       left: 0;
       background-image: url(../images/svg/problem-logo.svg);
       background-position: center;
